--- a/index.html
+++ b/index.html
@@ -14,11 +14,19 @@
 
     <section class="product-info">
         <h2>Por que escolher o ThermoRelax Pro?</h2>
-        <p>Para quem sofre de problemas cardíacos, o medo de passar mal durante a noite, enquanto todos dormem, pode ser assustador. Pensando nisso, o <strong>ThermoRelax Pro</strong> foi desenvolvido para trazer conforto e, acima de tudo, segurança para você e sua família.</p>
-        
-        <p>O <strong>ThermoRelax Pro</strong> é um travesseiro inovador que monitora seus batimentos cardíacos enquanto você dorme. Com sensores de alta precisão, ele detecta qualquer alteração nos seus sinais vitais, e em caso de emergência, um alerta é enviado instantaneamente para seus familiares através do aplicativo exclusivo.</p>
+        <p>O <strong>ThermoRelax Pro</strong> foi desenvolvido para oferecer não apenas conforto, mas também segurança durante seu descanso. Ideal para quem enfrenta problemas cardíacos e deseja uma noite tranquila, sabendo que a sua saúde está sendo monitorada com precisão.</p>
 
-        <ul>
+        <div class="info-container">
+            <h3>Monitoramento Avançado</h3>
+            <p>Com sensores de alta precisão, o <strong>ThermoRelax Pro</strong> monitora seus batimentos cardíacos em tempo real e envia alertas para seus familiares em caso de qualquer alteração significativa.</p>
+        </div>
+
+        <div class="info-container">
+            <h3>Experiência de Relaxamento Completa</h3>
+            <p>Desfrute de uma massagem relaxante e ajuste automático de temperatura para garantir o conforto ideal, independentemente da estação do ano.</p>
+        </div>
+
+        <ul class="features-list">
             <li>1 - Monitora os batimentos cardíacos em tempo real</li>
             <li>2 - Avisa seus familiares em caso de emergência</li>
             <li>3 - Proporciona massagem relaxante para reduzir o estresse</li>
@@ -26,13 +34,10 @@
             <li>5 - Conforto premium com tecnologia de ponta</li>
         </ul>
 
-        <p>Além disso, o <strong>ThermoRelax Pro</strong> não é apenas um monitor de saúde. Ele oferece uma experiência de relaxamento completa com massagem personalizada e ajuste automático de temperatura. Seja inverno ou verão, ele garante que a superfície do travesseiro esteja sempre na temperatura ideal para o seu conforto, ajudando você a ter um sono tranquilo e restaurador.</p>
-
         <h3>Segurança e Tranquilidade para Toda a Família</h3>
-        <p>Quem já enfrentou problemas cardíacos sabe o quanto é assustador pensar em passar mal no meio da noite, sem que ninguém saiba o que está acontecendo. O <strong>ThermoRelax Pro</strong> elimina esse medo, oferecendo monitoramento constante e uma rede de proteção para sua saúde, enquanto você descansa. Se algo inesperado acontecer, seus entes queridos serão avisados imediatamente, garantindo que a ajuda chegue rapidamente.</p>
+        <p>O <strong>ThermoRelax Pro</strong> não apenas cuida de você, mas também oferece uma rede de proteção para sua família. Se algo inesperado acontecer, seus entes queridos serão avisados imediatamente, garantindo uma resposta rápida e eficaz.</p>
     </section>
 
-    <!-- Seção para a imagem -->
     <section class="product-image">
         <h2>Veja o nosso produto!</h2>
         <img src="imagens/imagemrelax.jpeg" alt="Imagem do ThermoRelax Pro" class="featured-image">
@@ -40,7 +45,7 @@
 
     <section class="cta">
         <h2>Garanta o seu agora!</h2>
-        <p>Não perca a oportunidade de melhorar suas noites de sono com o ThermoRelax Pro.</p>
+        <p>Transforme suas noites de sono com o conforto e a segurança do ThermoRelax Pro. Não perca a chance de investir em um descanso mais tranquilo e saudável.</p>
         <a href="https://pay.kirvano.com/ce52797a-f599-4593-a75a-b79ee5f44942" class="buy-button">Compre Agora</a>
     </section>
 
